# esp-idf-starter

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  fs.c  main.c  partitions_example.csv  rgb_led.h  server.c  wifi.c
main/adc/: adc-read.c  adc-read.h
main/lcd1602/: i2c-lcd.c
main/led/: rgb_led.c  rgb_led.h
main/utils/: utils.c  utils.h
